moving files into their correct places, and u-boot bbappend file as disabled the logic flip

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-custom = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-custom = "10"
 
 LAYERDEPENDS_meta-custom = "core"
-LAYERSERIES_COMPAT_meta-custom = "styhead"
+LAYERSERIES_COMPAT_meta-custom = "styhead scarthgap"
